OverconstrainedError in getUserMedia on iOS 18.1 Simulator rdar://152938326 https://bugs.webkit.org/show_bug.cgi?id=293949

Reviewed by Jean-Yves Avenard.

IOS Simulator does not have a camera but AVCaptureDevice systemPreferredCamera may not be null.
To prevent the case of exposing a camera that is not there, we do not use systemPreferredCamera in iOS simulator.

* Source/WebCore/platform/mediastream/mac/AVCaptureDeviceManager.mm:
(WebCore::AVCaptureDeviceManager::retrieveCaptureDevices):

Canonical link: https://commits.webkit.org/296083@main